config/samples/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: example-gateway
  annotations:
    kuadrant.io/gateway-cluster-label-selector: type=test
    mctc-sync-agent/all: 'true'
    mctc-syncer-patch/kind-mctc-workload-1: '[
      {"op": "replace", "path": "/spec/gatewayClassName", "value": "boo"},
      {"op": "replace", "path": "/spec/listeners/0/name", "value": "test"}
      ]'
spec:
  gatewayClassName: mctc-gw-istio-external-instance-per-cluster
  listeners:
  - name: test-listener-1
    port: 8443
    protocol: HTTPS
